roadmap link fix and page top bottom spacing adjusments

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -91,8 +91,9 @@ code {
 .page {
   width: 100%;
   max-width: 44rem;
-  margin: 3.2rem auto;
+  margin: 1rem auto;
   padding: 0 1rem;
+  padding-bottom: 1rem !important;
 }
 
 /* Logo */
